--- a/network.css
+++ b/network.css
@@ -1,5 +1,6 @@
 .link {
   stroke: #aaa;
+  fill: none;
 }
 
 .node text {
@@ -11,4 +12,17 @@
   stroke: #fff;
   stroke-width: 3px;
   fill: #555;
+}
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 100px;
+    height: 50px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
