--- a/network.css
+++ b/network.css
@@ -26,3 +26,15 @@ div.tooltip {
     border-radius: 8px;
     pointer-events: none;
 }
+
+.links path {
+  stroke: #999;
+  stroke-opacity: 0.6;
+  fill:none
+}
+
+circle{
+  stroke: #fff;
+  stroke-width: 3px;
+  fill: #555;
+}
