--- a/semanticui/css/graph.css
+++ b/semanticui/css/graph.css
@@ -15,30 +15,38 @@
 }
 
 div.tooltip {
-    position: absolute;
-    text-align: center;
-    width: 100px;
-    height: 50px;
-    padding: 2px;
-    font: 12px sans-serif;
-    background: lightsteelblue;
-    border: 0px;
-    border-radius: 8px;
-    pointer-events: none;
+  position: absolute;
+  text-align: center;
+  width: 100px;
+  height: 50px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
 }
 
 .links path {
   stroke: #aaa;
   stroke-opacity: 0.6;
-  stroke-width: 5px;
-  fill:none
+  stroke-width: 3px;
+  fill: none
 }
 
-
 #svgA {
-  position :inherit;
+  position: inherit;
   margin: auto;
   width: 90%;
   height: 90%;
   left: 5%;
+}
+
+#svgGraph {
+  position: inherit;
+}
+
+#svgGraphContainerG {
+  width: inherit;
+  height: inherit;
 }
