Check box for none and whithheld

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,10 @@ body.pushable {
   background: #FFFFFF !important;
 }
 
+.pointer {
+  cursor:pointer;
+}
+
 .ui.menu .item img.logo {
   margin-right: 1.5em;
 }
